[#65] Fixed settings submit button placement on mobile. Resolves #65. Resolves #43.

--- a/app/static/less/settings.less
+++ b/app/static/less/settings.less
@@ -23,7 +23,7 @@
     }
 }
 
-.btn-settings-submit {
+.btn-settings-submit:not(.mobile_settings) {
     position: absolute;
     right: 0;
     bottom: 0;
